<resources>
    <string name="app_name">University_project</string>
    <string name="title_activity_login">로그인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--Login Form-->
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">회원가입</string>
    <string name="action_forgot_password">비밀번호찾기</string>
</resources>